<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_todo"
        android:textColor="@color/black"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/ic_navigate_before_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_info" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_todo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:contentPadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@id/tv_when"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="New event" />

            <TextView
                android:id="@+id/tv_when"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Today at 21:00" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/hint_description"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_todo" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/dark_gray"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_title"
        tools:text="Description" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_edit"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_edit_calendar_24"
        app:layout_constraintBottom_toTopOf="@id/tv_edit"
        app:layout_constraintEnd_toStartOf="@id/img_delete"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_delete"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_delete_24"
        app:layout_constraintBottom_toTopOf="@id/tv_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_edit" />

    <TextView
        android:id="@+id/tv_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/edit"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/img_edit"
        app:layout_constraintStart_toStartOf="@id/img_edit" />

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/img_delete"
        app:layout_constraintStart_toStartOf="@id/img_delete" />


</androidx.constraintlayout.widget.ConstraintLayout>